# UltraVNC

./: .gitignore  UltraVnc_installer_all_X64.iss
addon/ms-logon/MSLogonACL/: MSLogonACL.vcxproj  MSLogonACL_VC2017.vcxproj  MSLogonACLv12.vcxproj  MSLogonACLv15.vcxproj
addon/ms-logon/authSSP/: EventLogging.cpp  authSSP.vcxproj  authSSP_VC2017.vcxproj  authSSPv12.vcxproj  authSSPv15.vcxproj
addon/ms-logon/authadm/: authadmin.vcxproj  authadmin_VC2017.vcxproj  authadminv12.vcxproj  authadminv15.vcxproj
addon/ms-logon/ldapauth/: ldapauth.vcxproj  ldapauth_VC2017.vcxproj  ldapauthv12.vcxproj  ldapauthv15.vcxproj
addon/ms-logon/ldapauth9x/: ldapauth9x.vcxproj  ldapauth9x_VC2017.vcxproj  ldapauth9xv12.vcxproj  ldapauth9xv15.vcxproj
addon/ms-logon/ldapauthNT4/: ldapauthnt4.vcxproj  ldapauthnt4_VC2017.vcxproj  ldapauthnt4v12.vcxproj  ldapauthnt4v15.vcxproj
addon/ms-logon/logging/: logging.cpp  logging.vcxproj  logging_VC2017.vcxproj  loggingv12.vcxproj  loggingv15.vcxproj
addon/ms-logon/testauth/: testauth.vcxproj  testauth_VC2017.vcxproj  testauthv12.vcxproj  testauthv15.vcxproj
addon/ms-logon/workgrpdomnt4/: workgrpdomnt4.vcxproj  workgrpdomnt4_VC2017.vcxproj  workgrpdomnt4v12.vcxproj  workgrpdomnt4v15.vcxproj
avilog/avilog/: avilog.vcxproj
iss/: UltraVnc_installer_all_X64.iss
iss/UltraVNC_1_3_81/: Whatsnew.rtf
iss/preconfig/: SecureVNCPlugin64.dsm
iss/sign/: allen_tu.cer  allen_tu.pfx  plt_rsa_pri_pkcs8.pem  plt_rsa_pub_pkcs8.pem
iss/x64/UltraVNC_1_3_81/: Readme.txt
iss/x64/preconfig/: dlxx_vnc.ini  vnc.ini
repeater/: distributerVS2010.vcxproj
setcad/setcad/: setcad.vcxproj  setcad_VC2017.vcxproj  setcadv12.vcxproj  setcadv15.vcxproj
setpasswd/setpasswd/: inifile.cpp  inifile.h  setpasswd.vcxproj  setpasswd_VC2017.vcxproj  setpasswdv12.vcxproj  setpasswdv15.vcxproj  stdafx.h
uvnc_settings2/uvnc_settings/: inifile.cpp  inifile.h  service.cpp  stdafx.h  uvnc_settings.rc  uvnc_settings.vcxproj  uvnc_settings_VC2017.vcxproj  uvnc_settingsv12.vcxproj  uvnc_settingsv15.vcxproj
uvnckeyboardhelper/uvnckeyboardhelper/: uvnckeyboardhelper.vcxproj
vncviewer/: vncviewer.vcxproj  vncviewer_VC2017.vcxproj
winvnc/: winvncVS2017.sln
winvnc/DummyHttpServer/: DummyHttpServer.bak.cpp  DummyHttpServer.cpp  DummyHttpServer.vcxproj  DummyHttpServer.vcxproj.filters  stdafx.cpp
winvnc/DummyHttpServer/x64/Debug/: DummyHttpServer.pch  vc141.idb
winvnc/DummyHttpServer/x64/Release/: DummyHttpServer.pch
winvnc/UltraVnc/: UltraVnc_VS2010.vdproj  UltraVnc_VS2010_X64.vdproj
winvnc/VNCManager/: VNCManager.rc  VNCManager.vcxproj  VNCManager.vcxproj.filters  building_fmt.h  gen_building.bat  main.cpp  resource.h
winvnc/VNCManager/impl/: http_server.cpp  http_server.h  mgr_defines.h  mgr_looper.cpp  mgr_looper.h  mgr_main.cpp
winvnc/VNCManager/service/: service_motor.cpp
winvnc/VNCManager/utils/: encrypt.cpp  encrypt.h  utils.cpp  utils.h
winvnc/ext/base/: CMakeLists.txt  aligned_alloc.cpp  aligned_alloc.h  bit_processor.cpp  bit_processor.h  bitrate_statist.h  byte_array.cpp  byte_array.h  byte_fifo.cpp  byte_fifo.h  circular_buffer.cpp  circular_buffer.h  clock.cpp  clock.h  concurrent_queue.h  crash_utils.cpp  crash_utils.h  crash_utils_android.cpp  data_stream.cpp  data_stream.h  debug.h  dirent_r.h  double_buffer.h  endian.h  errno.cpp  errno.h  error_code.h  event_loop.cpp  event_loop.h  frame_rate_statist.h  global.cpp  global.h  log.cpp  log.h  log2.cpp  log_helper.h  math_log.c  math_log.h  performance_counter.h  recyclable_object.cpp  (+12 more)
winvnc/ext/base/encrypt/: base64.cpp  base64.h  md5.h
winvnc/ext/base/gfx/: alignment.h  color.h  layout.cpp  layout.h  point.h  rect.h  size.h  style_sheet.cpp  style_sheet.h
winvnc/ext/base/io/: io_context.cpp  io_context.h  io_device.cpp  io_device.h  timer.cpp  timer.h
winvnc/ext/base/json/: json2.hpp  json_helper.h  json_object.cpp  json_object.h
winvnc/ext/base/string/: string_utils.cpp  string_utils.h
winvnc/ext/base/types/: ssize_t.h
winvnc/ext/base/win/: getopt.c  getopt.h
winvnc/vnchooks/: vnchooks.vcxproj  vnchooks_VC2017.vcxproj  vnchooksv12.vcxproj  vnchooksv15.vcxproj
winvnc/winvnc/: VirtualDisplay.cpp  inifile.cpp  inifile.h  r_version.h  service_motor.cpp  stdhdrs.h  vncabout.cpp  vncdesktop.cpp  winvnc.cpp  winvnc.rc  winvnc.vcxproj  winvnc_VC2017.vcxproj  winvnc_VC2017.vcxproj.filters
(+6 files in other folders)
